--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,10 +25,4 @@ jobs:
         key: ${{ secrets.PRIVATE_KEY }}
         port: 22
         script: |
-          cd ~/expresscicd
-          git pull origin master
-          git status
-          export NVM_DIR=~/.nvm
-          source ~/.nvm/nvm.sh
-          npm install --only=prod
-          pm2 restart 0
+          pm2 stop 0
