--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,5 +16,5 @@ jobs:
       with:
         node-version: 12.x
     - run: npm i
-    - run: npm run build --if-present
+    - run: npm install --save-dev @babel/plugin-transform-modules-commonjs
     - run: npm test
